@@ -106,6 +106,7 @@ int shared_sensors = 0;
 int discrete_reading = 0;
 int ignore_scanning_disabled = 0;
 int assume_bmc_owner = 0;
+int altbridging = 0;
 int entity_sensor_names = 0;
 
 /* Initialization flags
@@ -298,6 +299,9 @@ _ipmimonitoring (struct ipmi_monitoring_ipmi_config *ipmi_config)
 
   if (assume_bmc_owner)
     sensor_reading_flags |= IPMI_MONITORING_SENSOR_READING_FLAGS_ASSUME_BMC_OWNER;
+
+  if (altbridging)
+    sensor_reading_flags |= IPMI_MONITORING_SENSOR_READING_FLAGS_ALTERNATE_BRIDGING;
 
   if (entity_sensor_names)
     sensor_reading_flags |= IPMI_MONITORING_SENSOR_READING_FLAGS_ENTITY_SENSOR_NAMES;
