@@ -41,7 +41,8 @@
   (IPMI_SENSOR_READ_FLAGS_BRIDGE_SENSORS             \
    | IPMI_SENSOR_READ_FLAGS_DISCRETE_READING         \
    | IPMI_SENSOR_READ_FLAGS_IGNORE_SCANNING_DISABLED \
-   | IPMI_SENSOR_READ_FLAGS_ASSUME_BMC_OWNER)
+   | IPMI_SENSOR_READ_FLAGS_ASSUME_BMC_OWNER         \
+   | IPMI_SENSOR_READ_FLAGS_ALTERNATE_BRIDGING)
 
 struct ipmi_sensor_read_ctx {
   uint32_t magic;
