@@ -1264,6 +1264,9 @@ _ipmi_monitoring_sensor_readings_flags_common (ipmi_monitoring_ctx_t c,
   if (sensor_reading_flags & IPMI_MONITORING_SENSOR_READING_FLAGS_ASSUME_BMC_OWNER)
     sensor_read_ctx_flags |= IPMI_SENSOR_READ_FLAGS_ASSUME_BMC_OWNER;
 
+  if (sensor_reading_flags & IPMI_MONITORING_SENSOR_READING_FLAGS_ALTERNATE_BRIDGING)
+    sensor_read_ctx_flags |= IPMI_SENSOR_READ_FLAGS_ALTERNATE_BRIDGING;
+
   if (sensor_read_ctx_flags)
     {
       if (ipmi_sensor_read_ctx_set_flags (c->sensor_read_ctx, sensor_read_ctx_flags) < 0)
